--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -106,8 +106,9 @@
 
         .paper_body {
             color: #24293d;
-            width: 95%;
-            margin: 0 auto;
+            width: 100%;
+            --margin: 0 auto;
+            padding:0px !important;
         }
 
         .card-actions {
