--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -33,7 +33,7 @@
 
         #buttons {
             margin-bottom: 10px;
-            margin-top: 10px;
+            margin-top: 20px;
         }
 
         #errorMessage {
@@ -54,7 +54,7 @@
             height: 32px;
         }
         paper-button{
-            border:none;
+            border: 1px solid;
         }
         aq-html-editor{
             --aq-html-editor-box-shadow:0 3px 8px rgba(0,0,0,0.2);
