Fixed Selection Problem in All Backtest page

--- a/src/components/analyze/aq-analyze-backtest-comparison-item.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-item.html
@@ -288,6 +288,7 @@
             doComparison: function () {
                 console.log(this.compareItems);
                 for (var key in this.compareItems) {
+//                    console.log(this.compareItems[key]);
                     if (this.compareItems[key]) {
                         if (!this.backtests[key]) {
 
